sites/all/themes/gbifwhite2012/css/global.css
/* ... */
.site-name a {
  color: #333;
  text-transform: uppercase;
}

.site-slogan {
  font-size: 0.85em;
  font-family: Arial, Helvetica, sans-serif;
  margin-top: -3px;
  color: #333;
  opacity: .5;
}

.logo-img {
  margin-right: 10px;
}

img#logo {
  height: 38px;
}

#region-search {
  margin: 0 10px 0 0;
  float: right;
}

#block-search-form {
  margin-top: 10px;
}

#search-block-form div.container-inline {
  width: 139px;
  height: 33px;
  float: right;
  padding: 0px 12px 0px 28px;
  background: url("../images/input_bkg.png") no-repeat scroll left 3px;
}

#search-block-form div.container-inline input#edit-search-block-form--2.form-text {
  color: #333;
  padding-left: 28px;
  margin-top: 4px;
  margin-left: -25px;
  height: 26px;
  width: 172px;
  background: none;
  border-radius: 11px;
  border: none;
}

#search-block-form div.container-inline input#edit-search-block-form--2.form-text:focus {
  border: 1px solid #ccc;
  box-shadow: 0 0 5px rgba(72, 154, 59, 1);
  -webkit-box-shadow: 0 0 5px rgba(72, 154, 59, 1); 
  -moz-box-shadow: 0 0 5px rgba(72, 154, 59, 1);
}

#search-block-form input.form-submit {
  display: none;
}

Header {
  border-bottom: #ccc solid 1px;
}

#section-header {
  z-index: 1000;
}

#section-content {
  padding-bottom: 480px;
}

#page-title { font-size: 2em; }

#map {
  margin: auto auto;
  z-index: -100;
}

.map-title-fixed { position: fixed; top: 145px; color: #444; }
.map-title-relative { position: absolute; float: left; color: #444; }

.map-tabs-fixed { position: fixed; top: 231px; }
ul.map-tabs-fixed { border-bottom: none; }
ul.map-tabs-fixed li a { border-radius: 3px; border: 1px solid #ccc; padding: 0.3em 1em; }
ul.map-tabs-fixed li a.active { border-radius: 3px; border: none; background-color: #09C; color: #fff; font-weight: bold; padding: 0.4em 1em; }

ul.map-tabs-relative { position: absolute; float: left; }
ul.map-tabs-relative { border-bottom: none; }
ul.map-tabs-relative li a { border-radius: 3px; border: 1px solid #ccc; padding: 0.3em 1em; }
ul.map-tabs-relative li a:hover { border-radius: 3px; border: 1px solid #ccc; padding: 0.3em 1em; }
ul.map-tabs-relative li a.active { border-radius: 3px; border: none; background-color: #09C; color: #fff; font-weight: bold; padding: 0.4em 1em; }

#zone-preface-wrapper {
  border-bottom: #ccc solid 1px;
  height: 480px;
  /*background: url("../images/texture-noise.png");*/
  background-color: #d7f3fd;
  overflow: hidden;
  z-index: -1000;
}

#zone-preface {
  position: relative;
  height: 100%;
  margin-bottom: -40px;
}

#zone-preface h1 {
  color: #444;
  text-shadow: 1px 1px white;
  margin-left: 10px;
  padding-top: 20px;
  font-size: 2.0em;
  position: absolute;
  top: 0px;
  z-index: 100;
}

#regional-map-menu-wrapper {
  position: absolute;
  height: 40px;
  bottom: 0px;
}
ul#map-region-menu {
}
ul#map-region-menu li {
  display: inline;
  padding: 0.3em; 
}
ul#map-region-menu li a { border-radius: 3px; border: 1px solid #09C; padding: 0.3em 1em; text-decoration: none; color: #09C;}
ul#map-region-menu li a:hover { border-radius: 3px; border: 1px solid #fff; padding: 0.3em 1em; background: #fff; }
ul#map-region-menu li a.active { border-radius: 3px; border: none; background-color: #09C; color: #09C; font-weight: bold; padding: 0.4em 1em; }

#zone-content { padding-top: 20px; }

#breadcrumb {
  font-family: DINOT-Medium;
}

#breadcrumb a {
  text-decoration: none;
}

#breadcrumb a:hover {
  text-decoration: underline;
}

#region-content { padding-bottom: 40px; }

#region-content h1 {
  color: #444;
  text-shadow: 1px 1px white;
}

#participant-list h3 {
  font-size: 1.2em;
  margin-bottom: 5px;
}

#participant-list h4 {
  margin-bottom: 10px;
}


#region-sidebar-second li {
  list-style: none;
  padding-left: 10px;
  margin-left: 6px;
  font-family: Arial, Helvatica, sans-serif;
}

#region-sidebar-second li a {
  text-decoration: none;
}

#region-sidebar-second li a:hover {
  opacity: .4;
}

#comments form { width: 75%; }
#comments h2 {
  font-family: DINOT-Regular, sans-serif;
  font-size: 1.4em;
  color: #333;
}

#comment-form label {
  font-family: Arial, Helvatica, sans-serif;
  font-size: 1.2em;
  font-weight: normal;
  color: #444;
}

#comment-form fieldset { padding-top: 0px; padding-bottom: 0px; }
div#edit-comment-body-und-0-format-help.filter-help.form-wrapper { padding: 0; }
div.form-item.form-type-select.form-item-comment-body-und-0-format { padding: 0px; }

section #block-gbif-spdsht-upload-and-process {
  border: 1px dotted gray;
  border-radius: 4px;
  margin: -5px -5px 0px -10px;
  padding: 5px 5px 15px 10px;
  bottom: 10px;
  background: #F2F2EE;
}

section #block-gbif-spdsht-available-templates {
  margin-top: 10px;
}

#region-sidebar-first { padding-bottom: 40px; }
#region-sidebar-second { padding-bottom: 40px; }

#section-footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 481px;
}

#zone-postscript-wrapper {
  height: 180px;
  color: #666;
  padding: 10px;
  overflow: hidden;
  border-top: 1px solid #eee;
}

#zone-postscript {
  font-family: Arial, Helvetica, sans-serif;
}

#zone-postscript a {
  text-decoration: none;
  color: #666;
}

#zone-postscript a:hover {
  opacity: .4;
}

#zone-postscript h2 {
  font-family: DINOT-Regular;
  font-size: 13px;
  text-transform: uppercase;
  margin-bottom: 5px;
}

#zone-postscript ul li {
  margin: 0 0 0.25em 0;
  opacity: 1;
  white-space: nowrap;
}

#zone-postscript ul li a {
  color: #888;
  text-decoration: none;
}

#zone-postscript ul li a:hover {
  opacity: .4;
}

#region-postscript-first { overflow: hidden; }
#region-postscript-second { overflow: hidden; }
#region-postscript-third { overflow: hidden; }

.more-link {
  float: left;
}

#zone-footer-wrapper {
  position: relative;
  height: 200px;
  padding: 20px;
  overflow: hidden;
  background-color: rgba(30,50, 10, 0.078125);
  /*
  Textured background
  background: url("../images/footer_bkg_bw.jpg") repeat-x;
  */
}
/* ... */

